package dmRenderDDF;

import "ddf/ddf_extensions.proto";
import "ddf/ddf_math.proto";

option java_package = "com.dynamo.render.proto";
option java_outer_classname = "Font";
option (ddf_java_package) = "com.dynamo.render.ddf";

message FontDesc
{
    required string Font = 1 [(resource)=true];
    required string Material = 2 [(resource)=true];
    required uint32 Size = 3;
    optional uint32 Antialias = 4 [default = 1];
    optional float Alpha = 5 [default = 1.0];
    optional float OutlineAlpha = 6 [default = 0.0];
    optional float OutlineWidth = 7 [default = 0.0];
    optional float ShadowAlpha = 8 [default = 0.0];
    optional uint32 ShadowBlur = 9 [default = 0];
    optional float ShadowX = 10 [default = 0.0];
    optional float ShadowY = 11 [default = 0.0];
}

message FontMap
{
    message Glyph
    {
        required uint32 Width = 1;
        required float Advance = 3;
        required float LeftBearing = 4;
        required uint32 Ascent = 6;
        required uint32 Descent = 7;
        required int32 X = 8;
        required int32 Y = 9;
    }

    repeated Glyph Glyphs = 1;
    required string Material = 2;
    required uint32 ImageWidth = 3;
    required uint32 ImageHeight = 4;
    required bytes ImageData = 5;
    optional float ShadowX = 6;
    optional float ShadowY = 7;
}
